--- a/ads/Gemfile
+++ b/ads/Gemfile
@@ -2,7 +2,8 @@ source 'https://rubygems.org'
 
 gem 'dry-initializer'
 gem 'fast_jsonapi'
-# gem 'jsonapi-serializer', git: 'git://github.com/jsonapi-serializer/jsonapi-serializer'
+gem 'faraday'
+gem 'faraday_middleware'
 gem 'sinatra', '~> 2.0'
 gem 'sinatra-contrib', '~> 2.0', require: false
 gem 'puma', '~> 4.3'
